# eddi

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
eddi/: CMakeLists.txt
eddi-g/: CMakeLists.txt
eddi-g/src/: CMakeLists.txt
eddi/include/: eddi_constants.h  eddi_macro.h  eddi_types.h
eddi/include/density/: eddi_density_functions.h
eddi/include/density_field/: eddi_density_field.h
eddi/include/io/: eddi_density_readers.h  eddi_input_atom_list.h  eddi_molecule_readers.h
eddi/include/molecule/: eddi_molecule.h
eddi/include/util/: eddi_atomic_data.h
eddi/src/: CMakeLists.txt
eddi/src/density/: eddi_density_functions.c
eddi/src/density_field/: eddi_density_field.c  eddy_density_field.c
eddi/src/io/: eddi_density_readers.c  eddi_density_writers.c  eddi_input_atom_list.c  eddi_molecule_readers.c
eddi/src/molecule/: eddi_molecule.c
eddi/src/util/: eddi_atomic_data.c
include/: eddi_base_includes.h  eddi_constants.h  eddi_macro.h  eddi_types.h
include/density/: eddi_density_functions.h
include/density_field/: eddi_density_field.h
include/io/: eddi_density_readers.h  eddi_density_writers.h  eddi_molecule_readers.h
include/molecule/: eddi_atom.h  eddi_molecule.h
include/util/: eddi_atomic_data.h
scripts/: shielding_constants.py
scripts/shielding/: 512_atoms_example.py  alanine_example.py  amber_radii.py  atom_descriptor.py  charge_density.py  clementi_table.py  clementi_wavefunction.py  compare_o2.py  config.py  constants.py  diatomic_molecule.py  gaussian_cube_io.py  general_molecule.py  pdb_reader.py  probe_radii.py  read_gaussian_cube.py  shielding_constant_calculator.py  shielding_constants.py  slater_wavefunction.py  volume_computation.py
scripts/shielding/plotting/: isodensity_plotter.py  plot_densities.py  plot_electrons.py  plot_radii.py  plot_timings.py
scripts/shielding/utils/: download_data.py
src/: CMakeLists.txt
src/density/: eddi_density_functions.c
src/density_field/: eddy_density_field.c
src/io/: eddi_density_readers.c  eddi_density_writers.c  eddi_input_atom_list.c  eddi_molecule_readers.c
src/molecule/: eddi_molecule.c
src/util/: eddi_atomic_data.c
test/: CMakeLists.txt  test_adenosine.c  test_binary_reader.c  test_binary_writer.c  test_gaussian_io.c  test_h2.c  test_he2.c  test_hydrogen.c  test_include.c  test_mol.c  test_pdb_reader.c  test_symbol_to_number.c
test/eddi/: CMakeLists.txt  benchmark_algs.c  gaussian_to_binary.c  test_512.c  test_9jt3.c  test_9mxc.c  test_adenosine.c  test_binary_writer.c  test_cell_list.c  test_gaussian_io.c  test_h2o.c  test_he2.c  test_pdb_reader.c
test/eddi-g/: CMakeLists.txt
